<li>Corrected importing of public keys. Cannot assume that key pairs exist.</li>
<li>Corrected removal of URLs having special characters.</li>
<li>Corrected setting of remote IP information. Please see Neighbors.</li>
<li>Corrected use of spoton::addFriendsKey().</li>
<li>Custom status messages. A maximum of 64 characters will be imposed.</li>
<li>Denote extreme time deltas in Chat. Currently configured to thirty seconds. Source only.</li>
<li>Derive subsequent file encryption key from initially-derived key via SHA-256 (Key_(i + 1) = SHA-256(Key_i)).</li>
<li>Digital signatures should vouch for private key information.</li>
<li>Display URL database connection information within the Search panel.</li>
<li>Do not delete URLs from shared.db unless they are properly loaded.<li>
<li>Do not initiate a rapid StarBeam if the specified participant is temporary.</li>
<li>Dual-purpose domain check boxes. Please see URLs.</li>
<li>Encapsulate data into streams and decrease Base-64 conversions. This will result in smaller messages. Previous functionality will be disrupted.</li>
<li>Establish authentication and encryption keys via silent SMP. The authentication and encryption keys are derived from a Whirlpool digest of the secret.</li>
<li>Guard QList::last().</li>
<li>Guard QList::removeAt().</li>
<li>Notify the user of URL import statistics.</li>
<li>Populate URL polarizers before performing an import.</li>
<li>Prompt before accessing a remote URL.</li>
<li>Removed input masks from IPv6 fields.</li>
<li>Replace spaces with dashes in StarBeam and e-mail attachment file names.</li>
<li>Replaced the itemClicked() signal on the e-mail table with itemDoubleClicked() as itemClicked() and itemSelectionChanged() may cause duplicate dialog prompts.</li>
<li>Require account salts to contain at least 512 bytes.</li>
<li>Require the messages in 0002a and 0002b to contain at least 64 bytes.</li>
<li>Simplified copying and exporting of public keys.</li>