@@ -15,6 +15,7 @@
 <li>Corrected setting of remote IP information. Please see Neighbors.</li>
 <li>Corrected use of spoton::addFriendsKey().</li>
 <li>Custom status messages. A maximum of 64 characters will be imposed.</li>
+<li>Decreased message size of Rosetta output.</li>
 <li>Denote extreme time deltas in Chat. Currently configured to thirty seconds. Source only.</li>
 <li>Derive subsequent file encryption key from initially-derived key via SHA-256 (Key_(i + 1) = SHA-256(Key_i)).</li>
 <li>Digital signatures should vouch for private key information.</li>
@@ -26,6 +27,7 @@
 <li>Establish authentication and encryption keys via silent SMP. The authentication and encryption keys are derived from a Whirlpool digest of the secret.</li>
 <li>Guard QList::last().</li>
 <li>Guard QList::removeAt().</li>
+<li>Modified QFileInfo::lastModified() usage. It's possible that a less-than-or-equal to comparison will leave containers in unpleasant states.</li>
 <li>Notify the user of URL import statistics.</li>
 <li>Populate URL polarizers before performing an import.</li>
 <li>Prompt before accessing a remote URL.</li>
